@@ -1,5 +1,6 @@
 v4.8 ???
   - Added the %InitialisationCode directive.
+  - super() now works as expected.
 
 v4.7.9 17th November 2008
   - A bug fix release.
